--- a/css/vars.less
+++ b/css/vars.less
@@ -12,6 +12,8 @@
 @cyan: #09f;
 @brand: #f90;
 
+@container: 503px; 
+@work: 733px;
 
 // Container sizes
 // --------------------------------------------------
