--- a/css/respond.less
+++ b/css/respond.less
@@ -12,6 +12,26 @@
 		text-align: left;
 	}
 
+	@ws: 733px;
+	@wsw: percentage(200/@ws);
+
+	.works {
+		width: @ws;
+		margin: 0 -((@ws - @container) / 2);
+		.row {
+			.work {
+				max-width: @wsw;
+				margin: 0 ((percentage(1)-(@wsw*3))/2) 0 0;
+				&:nth-child(2) {
+					margin-right: ((percentage(1)-(@wsw*3))/2);
+				}
+				&:nth-child(3) {
+					margin-right: 0;
+				}
+			}
+		}
+	}
+
 }
 
 @media (min-width: @screen-lg-min) {
