--- a/css/styles.less
+++ b/css/styles.less
@@ -56,6 +56,12 @@ em {
 	font-style: italic;
 }
 
+hr {
+	border: 0;
+	background: none;
+	height: 4em;
+}
+
 abbr {
 	font-variant: small-caps;
 	letter-spacing: .05em;
@@ -135,6 +141,9 @@ dl {
 			img {
 				width: 100%;
 			}
+		}
+		.app-icon {
+			width: 76px;
 		}
 	}
 }
