--- a/css/ui.less
+++ b/css/ui.less
@@ -86,14 +86,21 @@ abbr {
 	a {
 		display: inline-block;
 		padding: 0 2px 0 0;
+		margin: 0 19px 0 0;
 		&:after {
-			content: ',';
+			content: '';
 		}
 		&:last-child {
 			&:after {
 				content: '';
 			}
 		}
+		&.active {
+			.box-shadow(0 2px 0 @cyan);
+		}
+	}
+	&.work {
+		padding-bottom: 31px;
 	}
 }
 
