--- a/css/ui.less
+++ b/css/ui.less
@@ -78,6 +78,8 @@ abbr {
 		font-size: 16px;
 		text-align: center;
 		color: lighten(@color, 33%);
+		line-height: 1.2em;
+		padding: 13px 19px 0;
 	}
 }
 
