--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,107 @@
 
 @import "reset.css";
 
+:root {
+  --black: #040404;
+  --ltgray: #fbfbfb;
+  --teal: #00ffcb;
+  --blue: #0085ff;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 14px;
   text-rendering: optimizeLegibility;
+  color: var(--black);
+}
+
+a {
+  color: var(--blue);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.page {
+  max-width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 44px;
+  gap: 33px;
+}
+
+nav {
+  width: 168px;
+  flex: 0 0 auto;
+  padding: 11px 0 0;
+}
+
+nav li {
+  padding: 0 0 13px 1px;
+}
+
+nav li.logo {
+  padding-left: 0;
+  padding-bottom: 33px;
+}
+
+nav li a {
+  display: inline-block;
+}
+
+nav li.logo img {
+  max-width: 100%;
+  width: 99px;
+  display: block;
+}
+
+.content {
+  flex: 1 1 auto;
+  width: 100%;
+}
+
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 33px;
+}
+
+.portfolio figure {
+  width: calc((100% - 99px)/4);
+  max-width: 320px;
+  min-width: 200px;
+}
+
+.portfolio figure img {
+  display: block;
+  width: 100%;
+  background: var(--ltgray);
+  border-radius: 4px;
+}
+
+@media screen and (max-width: 768px) {
+
+  .page {
+    flex-direction: column;
+    padding: 44px;
+    align-items: center;
+  }
+
+  nav {
+    padding-bottom: 33px;
+    text-align: center;
+  }
+
+  .portfolio {
+    justify-content: center;
+  }
+
+  .portfolio figure {
+    width: calc((100% - 66px)/2);
+  }
+
 }
