--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@
 @import "reset.css";
 
 :root {
-  --black: #040404;
-  --gray: #787878;
+  --black: #16161d;
+  --gray: #818185;
   --ltgray: #fbfbfb;
   --teal: #00ffcb;
   --blue: #0085ff;
