color variable fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@
 :root {
   --eigengrau: 22,22,29;
   --black: rgba(var(--eigengrau));
-  --gray: rgba(var(--black), 0.54);
-  --ltgray: rgba(var(--black), 0.03);
+  --gray: rgba(var(--eigengrau), 0.54);
+  --ltgray: rgba(var(--eigengrau), 0.03);
   --teal: #00ffcb;
   --blue: #0085ff;
 }
