--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,18 @@
 
 :root {
   --eigengrau: 22,22,29;
+  --whiter: 250,250,250;
   --black: rgba(var(--eigengrau));
-  --gray: rgba(var(--eigengrau), 0.54);
-  --ltgray: rgba(var(--eigengrau), 0.38);
-  --ltrgray: rgba(var(--eigengrau), 0.03);
+  --gray54: rgba(var(--eigengrau), 0.54);
+  --gray38: rgba(var(--eigengrau), 0.38);
+  --gray03: rgba(var(--eigengrau), 0.03);
   --teal: #00ffcb;
   --blue: #0085ff;
   --yellow: #fbff44;
-  --white: #fff;
+  --white: rgba(var(--whiter));
+  --white87: rgba(var(--whiter), 0.87);
+  --white54: rgba(var(--whiter), 0.54);
+  --white38: rgba(var(--whiter), 0.38);
   --reading: 16px;
   --body: 14px;
   --fontstack: -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -86,7 +90,7 @@ nav li.logo img {
 nav .meta {
   padding: 33px 0;
   font-size: 13px;
-  color: var(--gray);
+  color: var(--gray54);
 }
 
 .content {
@@ -96,7 +100,7 @@ nav .meta {
 
 figure figcaption {
   font-size: 12px;
-  color: var(--ltgray);
+  color: var(--gray38);
   padding: var(--reading) 0;
   border-radius: 4px;
   text-align: center;
@@ -121,7 +125,7 @@ figure figcaption {
   left: 4px;
   border-radius: 3px;
   color: var(--white);
-  background: var(--gray);
+  background: var(--gray54);
   padding: 3px;
 }
 
@@ -182,7 +186,7 @@ h1 {
 }
 
 .under-construction {
-  color: var(--ltgray);
+  color: var(--gray38);
   padding: calc(var(--body)*3) 0;
   border-radius: 4px;
   width: 100%;
@@ -232,4 +236,34 @@ em {
   }
   
 
+}
+
+.dark {
+  background: var(--black);
+  color: var(--white);
+  -webkit-font-smoothing: antialiased;
+}
+
+.dark a {
+  color: var(--teal);
+}
+
+.dark .logo a {
+  color: var(--white);
+}
+
+.logo a:hover {
+  color: var(--teal);
+}
+
+.dark nav .meta {
+  color: var(--white54);
+}
+
+.dark figure figcaption {
+  color: var(--white38);
+}
+
+.dark .portfolio figure figcaption {
+  color: var(--white);
 }
