--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
   --black: rgba(var(--eigengrau));
   --gray54: rgba(var(--eigengrau), 0.54);
   --gray38: rgba(var(--eigengrau), 0.38);
+  --gray12: rgba(var(--eigengrau), 0.12);
   --gray03: rgba(var(--eigengrau), 0.03);
   --teal: #00ffcb;
   --blue: #0085ff;
@@ -29,6 +30,10 @@
   --body: 14px;
   --fontstack: -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --displaystack: 'Baewatch';
+}
+
+html, body {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -91,6 +96,41 @@ nav .meta {
   padding: 33px 0;
   font-size: 13px;
   color: var(--gray54);
+}
+
+nav .totop {
+  position: fixed;
+  left: 30px;
+  bottom: 30px;
+  padding: 0;
+}
+
+nav .totop a {
+  color: var(--white);
+  display: block;
+  text-align: center;
+  vertical-align: middle;
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  font-weight: 500;
+  background: var(--gray12);
+  border-radius: 50%;
+  font-size: calc(var(--reading)*1.5625);
+  cursor: pointer;
+  opacity: 0;
+  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition-property: background, opacity;
+  transition-duration: .2s;
+}
+
+nav .totop a:hover {
+  text-decoration: none;
+  background: var(--blue);
+}
+
+nav .show a {
+  opacity: 1;
 }
 
 .content {
@@ -234,7 +274,6 @@ em {
   .under-construction {
     padding: calc(var(--body)*3);
   }
-  
 
 }
 
@@ -252,7 +291,7 @@ em {
   color: var(--white);
 }
 
-.logo a:hover {
+.dark .logo a:hover {
   color: var(--teal);
 }
 
