--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --eigengrau: 22,22,29;
   --whiter: 250,250,250;
   --black: rgba(var(--eigengrau));
+  --gray87: rgba(var(--eigengrau), 0.87);
   --gray54: rgba(var(--eigengrau), 0.54);
   --gray38: rgba(var(--eigengrau), 0.38);
   --gray12: rgba(var(--eigengrau), 0.12);
@@ -220,16 +221,16 @@ figure figcaption {
 }
 
 h1 {
-  font-family: var(--displaystack);
-  font-size: calc(var(--reading)*5);
-  font-weight: 800;
-  line-height: calc((var(--reading)*5)*1.52);
+  font-family: var(--fontstack);
+  font-size: var(--reading);
+  margin-bottom: var(--reading);
+  font-weight: 500;
+  line-height: calc((var(--reading)*1.52));
 }
 
 .logo a {
-  font-family: var(--displaystack);
-  font-size: calc(var(--reading)*3);
-  line-height: calc((var(--reading)*3)*1.52);
+  font-family: var(--fontstack);
+  font-size: var(--reading);
   color: rgba(var(--black));
   text-decoration: none;
 }
@@ -242,6 +243,7 @@ h1 {
   font-size: var(--reading);
   line-height: calc(var(--reading)*1.52);
   margin: 0 0 var(--reading);
+  color: var(--gray87);
 }
 
 .under-construction {
