--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,6 @@
 
 @import "reset.css";
 
-@font-face {
-  font-family: 'Baewatch';
-  src: url('BaewatchRegular.woff2') format('woff2'),
-      url('BaewatchRegular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
 :root {
   --eigengrau: 22,22,29;
   --whiter: 250,250,250;
@@ -21,7 +12,10 @@
   --gray12: rgba(var(--eigengrau), 0.12);
   --gray03: rgba(var(--eigengrau), 0.03);
   --teal: #00ffcb;
-  --blue: #0085ff;
+  --blueRGB: 0, 133, 255;
+  --blue: rgba(var(--blueRGB));
+  --blue12: rgba(var(--blueRGB), .12);
+  --blue38: rgba(var(--blueRGB), .38);
   --yellow: #fbff44;
   --white: rgba(var(--whiter));
   --white87: rgba(var(--whiter), 0.87);
@@ -29,8 +23,7 @@
   --white38: rgba(var(--whiter), 0.38);
   --reading: 16px;
   --body: 14px;
-  --fontstack: -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --displaystack: 'Baewatch';
+  --fontstack: 'Inter', -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 html, body {
@@ -42,15 +35,55 @@ body {
   font-size: var(--body);
   text-rendering: optimizeLegibility;
   color: var(--black);
+  -webkit-font-smoothing: antialiased;
+  font-variant-ligatures: common-ligatures;
+}
+
+h1, h2 {
+  font-family: var(--fontstack);
+  font-size: var(--reading);
+  margin-bottom: var(--reading);
+  font-weight: 500;
+  line-height: calc((var(--reading)*1.52));
+}
+
+h2 {
+  margin-bottom: 48px;
+}
+
+h3 {
+  margin-bottom: var(--reading);
+}
+
+h3, p {
+  line-height: calc((var(--reading)*1.52));
+  margin-bottom: var(--reading);
 }
 
 a {
   color: var(--blue);
+  display: inline-block;
+  text-decoration-color: var(--blue12);
+  text-decoration-thickness: 1px;
+  text-underline-offset: 2px;
+  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition-property: text-decoration-color, color;
+  transition-duration: .2s;
+}
+
+a i {
+  margin: 0 0 0 4px;
   text-decoration: none;
+  display: inline-block;
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration-color: var(--blue38);
+  text-decoration-thickness: 2px;
+}
+
+p a {
+  display: inline;
 }
 
 abbr {
@@ -59,82 +92,108 @@ abbr {
 }
 
 .page {
-  max-width: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 44px;
-  gap: 33px;
+  position: relative;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 352px auto;
+  grid-gap: 128px;
+  max-width: 1152px;
+  padding: 128px 32px 352px;
 }
 
-nav {
-  width: 168px;
-  flex: 0 0 auto;
-  padding: 11px 0 0;
+header, .process {
+  padding: 0 0 128px;
 }
 
-nav li {
-  padding: 0 0 13px 1px;
+header p {
+  color: var(--gray54);
 }
 
-nav li.logo {
-  padding-left: 0;
-  padding-bottom: 33px;
-}
-
-nav li a {
-  display: inline-block;
-}
-
-nav li.logo img {
-  max-width: 100%;
-  width: 99px;
+.pic {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  margin: 0 0 64px;
+  overflow: hidden;
   display: block;
+  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition-property: background, color;
+  transition-duration: .2s;
+  position: relative;
 }
 
-nav .meta {
-  padding: 33px 0;
+.pic:after {
+  content: '\2190';
+  left: 0;
+  top: 0;
 }
 
-nav .totop {
-  position: fixed;
-  left: 30px;
-  bottom: 30px;
-  padding: 0;
-}
-
-nav .totop a {
+.pic::after, .totop {
   color: var(--white);
   display: block;
   text-align: center;
-  vertical-align: middle;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
+  width: 64px;
+  height: 64px;
+  line-height: 64px;
   font-weight: 500;
-  background: var(--gray12);
   border-radius: 50%;
   font-size: calc(var(--reading)*1.5625);
   cursor: pointer;
   opacity: 0;
-  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
-  transition-property: background, opacity;
-  transition-duration: .2s;
+  position: absolute;
 }
 
-nav .totop a:hover {
-  text-decoration: none;
+.pic:hover {
   background: var(--blue);
 }
 
-nav .show a {
+.pic:hover::after {
   opacity: 1;
 }
 
-.content {
-  flex: 1 1 auto;
+.pic img {
+  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition-property: opacity;
+  transition-duration: .2s;
+  display: block;
+  border-radius: 50%;
   width: 100%;
+}
+
+.pic:hover img {
+  opacity: 0;
+}
+
+footer, .gallery {
+  padding: 132px 0 0 0;
+}
+
+footer ul li {
+  padding: 0 0 var(--reading);
+}
+
+.blink {
+  width: 29.07px;
+  height: 48px;
+  margin-bottom: 32px;
+}
+
+.blink svg {
+  width: 100%;
+  height: 100%;
+  fill: var(--gray87);
+}
+
+.works .work {
+  padding: 0 0 128px;
+}
+
+.hero {
+  grid-column: span 2;
+}
+
+figure {
+  padding: 0 0 112px;
 }
 
 figure figcaption {
@@ -145,157 +204,45 @@ figure figcaption {
   text-align: center;
 }
 
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 33px;
-}
-
-.portfolio figure {
-  width: calc((100% - 99px)/4);
-  max-width: 320px;
-  min-width: 200px;
-  position: relative;
-}
-
-.portfolio figure figcaption {
-  position: absolute;
-  bottom: 4px;
-  left: 4px;
-  border-radius: 3px;
-  color: var(--white);
-  background: var(--gray54);
-  padding: 3px;
-}
-
-.portfolio figure img, .use-case figure img {
+.gallery figure img {
   display: block;
   width: 100%;
   border-radius: 4px;
 }
 
-.portfolio figure a {
-  display: block;
+.totop {
+  position: fixed;
+  left: 64px;
+  bottom: 64px;
+  padding: 0;
 }
 
-.portfolio figure a img {
+.totop {
+  background: var(--gray12);
   transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
-  transition-property: border-radius, border,;
+  transition-property: background, opacity;
   transition-duration: .2s;
+  left: 64px;
+  bottom: 64px;
 }
 
-.portfolio figure a:hover {
-  
+.totop.show {
+  opacity: 1;
 }
 
-.portfolio figure a:hover img {
-  border-radius: 50%;
-  box-shadow: 0 0 16px var(--gray03);
-}
-
-.use-case figure.detail {
-  padding: calc(var(--reading)*8) 0;
-}
-
-.use-case figure.detail img {
-  border-radius: 4px;
-  position: relative;
-}
-
-.use-case figure.detail img::after {
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-shadow: 0 0 3px inset rgba(var(--eigengrau), 0.03);
-  content: '';
-}
-
-.reading {
-  max-width: 640px;
-  margin: calc(var(--reading)*3) auto;
-}
-
-h1 {
-  font-family: var(--fontstack);
-  font-size: var(--reading);
-  margin-bottom: var(--reading);
-  font-weight: 500;
-  line-height: calc((var(--reading)*1.52));
-}
-
-.logo a {
-  font-family: var(--fontstack);
-  font-size: var(--reading);
-  color: rgba(var(--black));
+.totop:hover {
   text-decoration: none;
-}
-
-.logo a:hover {
-  color: var(--blue);
-}
-
-.reading p, .under-construction p {
-  font-size: var(--reading);
-  line-height: calc(var(--reading)*1.52);
-  margin: 0 0 var(--reading);
-  color: var(--gray87);
-}
-
-.under-construction {
-  color: var(--gray38);
-  padding: calc(var(--body)*3) 0;
-  border-radius: 4px;
-  width: 100%;
-}
-
-em {
-  font-family: var(--displaystack);
-  font-size: calc(var(--reading)*1.52);
+  background: var(--blue);
 }
 
 @media screen and (max-width: 768px) {
 
   .page {
-    flex-direction: column;
-    padding: 44px 0;
-    align-items: center;
+    display: block;
   }
 
-  nav {
-    padding: 33px 44px;
-    text-align: center;
-    width: auto;
-  }
-
-  nav .show a {
-    opacity: 0;
-  }
-
-  .portfolio {
-    justify-content: center;
-  }
-
-  .portfolio figure {
-    width: calc((100% - 66px)/2);
-  }
-
-  .reading {
-    padding: 0 44px;
-  }
-
-  .use-case figure img {
-    border-radius: 0;
-  }
-
-  .reading .use-case figure img {
-    border-radius: 4px;
-  }
-
-  .under-construction {
-    padding: calc(var(--body)*3);
+  footer {
+    padding: 0;
   }
 
 }
