--- a/stuff/css/styles.css
+++ b/stuff/css/styles.css
@@ -97,17 +97,7 @@ abbr {
   letter-spacing: 1px;
 }
 
-.page {
-  position: relative;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 352px auto;
-  grid-gap: 128px;
-  max-width: 1152px;
-  padding: 128px 32px 352px;
-}
-
-header, .process {
+header {
   padding: 0 0 128px;
 }
 
