--- a/stuff/css/styles.css
+++ b/stuff/css/styles.css
@@ -46,7 +46,7 @@ header, footer, .stuffs {
     margin: 0 auto;
 }
 
-header {
+header, footer {
     text-align: center;
 }
 
@@ -111,7 +111,7 @@ header p {
 }
 
 footer {
-  padding: 132px 0 0 0;
+  padding: 100px 0;
 }
 
 footer ul li {
@@ -142,12 +142,6 @@ footer ul li {
 
 @media screen and (max-width: 768px) {
 
-  .page {
-    display: block;
-  }
 
-  footer {
-    padding: 0;
-  }
 
 }
