--- a/stuff/css/styles.css
+++ b/stuff/css/styles.css
@@ -123,7 +123,7 @@ footer ul li {
 }
 
 .stuff {
-    background: var(--white);
+    background: var(--whiter);
     border-radius: 10px;
     box-shadow: 0 0 10px var(--gray03);
 }
