--- a/stuff/css/styles.css
+++ b/stuff/css/styles.css
@@ -115,7 +115,7 @@ footer ul li {
 }
 
 .stuff {
-    background: var(--white);
+    background: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px var(--gray03);
     padding: 40px;
