--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ h2 {
 
 h3 {
   font-weight: 500;
-  color: var(--teal);
+  color: var(--blue);
 }
 
 h3, p {
@@ -122,7 +122,7 @@ abbr {
   padding: 128px 32px 352px;
 }
 
-header, h2, h3, .blink, .page p, footer {
+header, h2, h3, .mallard, .blink, .page p, footer {
   width: 448px;
   margin-left: auto;
   margin-right: auto;
@@ -202,7 +202,11 @@ footer ul li {
   padding: 0 0 var(--reading);
 }
 
-.blink {
+.mallard {
+  font-size: 48px;
+}
+
+.blink, .mallard {
   /* width: 29.07px; */
   height: 48px;
   margin-bottom: 32px;
@@ -216,9 +220,6 @@ footer ul li {
 
 .works .work {
   padding: 0 0 128px;
-}
-
-.hero {
 }
 
 figure {
