--- a/css/styles.css
+++ b/css/styles.css
@@ -70,9 +70,11 @@ h3, p {
   margin-bottom: var(--reading);
 }
 
-code {
+code, h5 {
   font-family: var(--codestack);
-  font-size: calc((var(--reading)*.875));;
+  font-size: calc((var(--reading)*.8125));
+  line-height: 1.4em;
+  color: var(--gray54);
 }
 
 a {
@@ -134,10 +136,17 @@ i {
   padding: 128px 32px 352px;
 }
 
-header, h2, h3, .mallard, .blink, .page p, footer {
-  width: 448px;
-  margin-left: auto;
-  margin-right: auto;
+.row {
+  max-width: 768px;
+  display: grid;
+  grid-template-columns: auto 448px;
+  column-gap: 32px;
+  margin: var(--reading) auto;
+}
+
+.solo-col {
+  max-width: 448px;
+  margin: var(--reading) auto;
 }
 
 header, .process, .works .work {
@@ -148,15 +157,14 @@ header p {
   color: var(--gray54);
 }
 
-.pic, .pic::after, .totop {
-  width: 64px;
-  height: 64px;
+.pic, .pic::after {
+  width: 96px;
+  height: 96px;
   border-radius: 50%;
   display: block;
 }
 
 .pic {
-  margin: 0 0 64px;
   overflow: hidden;
   transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
   transition-property: background, color;
@@ -168,21 +176,21 @@ header p {
   content: '\2190';
   left: 0;
   top: 0;
+  opacity: 0;
+  position: absolute;
 }
 
 .pic.home::after {
   content: '';
 }
 
-.pic::after, .totop {
+.pic::after {
   color: var(--white);
   text-align: center;
-  line-height: 64px;
+  line-height: 96px;
   font-weight: 500;
   font-size: calc(var(--reading)*1.5625);
   cursor: pointer;
-  opacity: 0;
-  position: absolute;
 }
 
 .pic:hover {
@@ -241,14 +249,13 @@ figure.screen {
 }
 
 figure figcaption {
-  font-size: 12px;
+  font-size: calc((var(--reading))*.75);
   color: var(--gray38);
   padding: var(--reading) 0;
   border-radius: 4px;
-  text-align: center;
   font-family: var(--codestack);
   line-height: 1.4em;
-  max-width: 100vh;
+  max-width: 448px;
   margin: 0 auto;
 }
 
@@ -257,31 +264,6 @@ figure img {
   max-width: 100%;
   border-radius: 4px;
   max-height: 100vh;
-}
-
-.totop {
-  position: fixed;
-  left: 64px;
-  bottom: 64px;
-  padding: 0;
-}
-
-.totop {
-  background: var(--gray12);
-  transition-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1);
-  transition-property: background, opacity;
-  transition-duration: .2s;
-  left: 64px;
-  bottom: 64px;
-}
-
-.totop.show {
-  opacity: 1;
-}
-
-.totop:hover {
-  text-decoration: none;
-  background: var(--blue);
 }
 
 @media screen and (max-width: 768px) {
