--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ h3 {
   font-weight: 600;
 }
 
-h3, p, .row .col h5:only-child {
+h3, p, .row .col h5:only-child, ol {
   line-height: 1.4em;
   margin-bottom: var(--reading);
 }
@@ -110,6 +110,15 @@ abbr {
 
 i {
   font-family: var(--fontstack);
+}
+
+ol {
+  padding: 0 0 0 1em;
+}
+
+ol li {
+  padding: 0 0 calc((var(--reading))/2);
+  list-style: disc;
 }
 
 .hilite {
