--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@
   --reading: 16px;
   --body: 14px;
   --fontstack: 'Inter', -apple-system, BlinkMacSystemFont, segoe ui, Ubuntu, roboto, arial, sans-serif,  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --displaystack: 'Calistoga', cursive;
+  --displaystack: 'Bricolage Grotesque', sans-serif;
   --codestack: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace;
 }
 
