--- a/css/drums.css
+++ b/css/drums.css
@@ -174,6 +174,16 @@
     margin-bottom: 2rem;
 }
 
+.drum-machine-item-glyph {
+    width: 32px;
+    height: 32px;
+    margin-bottom: 2rem;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .sound-played-glyph, .drum-machine-item-touched svg {
     animation: wiggle .13s ease-out;
     animation-fill-mode: none;
@@ -199,7 +209,7 @@
         background-color: var(--blue03);
       }
 
-      .drum-machine-item svg {
+      .drum-machine-item svg, .drum-machine-item-glyph {
         margin: 0;
       }
 
